# ResumeForgeAI

./: .gitignore  Makefile  README.md  main.py  optimized_resume.tex  requirements.txt  run.py  setup.py  test_optimization.py
CompanyConfig/: ChatChainConfig.json  PhaseConfig.json  RoleConfig.json
agents/: agent_communication.py  coordinator.py  critic.py  deductive_reasoner.py  job_analyzer.py  optimizer.py  resume_parser.py
config/: prompts.py  system_messages.py
data/: sample_job_description.txt
data/samples/: sample_resume.tex
resume_optimizer/: __init__.py  cli.py
resume_optimizer/agents/: ats_agent.py  base_agent.py  evaluator_agent.py  experience_agent.py  skill_agent.py
resume_optimizer/core/: job_analyzer.py  latex_handler.py  optimizer.py  workforce_optimizer.py
resume_optimizer/tasks/: task_definitions.py  task_utils.py
resume_optimizer/utils/: latex_utils.py  model_factory.py  resume_evaluator.py  text_utils.py
resume_optimizer/workforce/: coordinator.py  workers.py  workflow.py
resumeai/: phase.py  resume_chain.py  resume_env.py  statistics.py  utils.py
resumeautomation/: README.md  pyproject.toml
resumeautomation/src/resumeautomation/: crew.py  main.py
resumeautomation/src/resumeautomation/config/: agents.yaml  tasks.yaml
resumeautomation/src/resumeautomation/tools/: google_drive_tools.py  google_sheets_tool.py  latex_tool.py  pdf_analysis_tool.py
resumeforegerai/: disable_pycache.py  main.py
resumeforegerai/agents/: compliance_agent.py  job_analyzer.py  latex_validator.py  orchestrator.py  resume_analyzer.py  resume_generator.py  skills_agent.py  work_experience_agent.py
resumeforegerai/config/: phases.json  phases.json.bak
resumeforegerai/config/agents/: compliance_agent.json  job_analyzer.json  (+6 more)
resumeforegerai/output/: job_analysis.json  resume_analysis.json
resumeforegerai/utils/: file_utils.py  latex_utils.py  openai_client.py
resumeforegerai/workflow/: graph.py  state.py
test_data/: optimized_resume.tex  resume.tex
tests/: test_resume_customizer.py
utils/: latex_utils.py
(+8 files in other folders)
